# ton-payments-in-telegram-bot

./: README.md  config.json  pyproject.toml  requirements.txt  ton payments example (en).md  ton payments example (ru).md
bot/: api.py  db.py  local.db  main.py
